# simple-matrix

./: Cargo.toml
src/: lib.rs  matrix.rs
src/matrix/: std_ops.rs
tests/: qcheck.rs
